# 4080_pratical_refactoring_example

./: .gitignore  README.md  data_tree.txt  pyproject.toml  repo_tree.txt  repo_tree_future.txt  repo_tree_future_V2.txt
config/: path_config.py
legacy/: .gitignore  0_以三條中軸篩選相片.py  1_以中軸角度校正圖片.py  2_new_鏡射相片.py  3_new_直方圖校正.py  4_new_pics_to_vectors.py  5_new_calculating_new_vectors_diff.py  6_new_train_model.py
legacy_V2/src/data/: balancing.py  demographics.py  loader.py
legacy_V2/src/train/: cross_validation.py  pipeline.py  trainer.py
legacy_V2/src/utils/: id_parser.py
legacy_V2/tests/: test_data_loading.py  test_demographics.py  test_full_intergration.py  test_pipeline.py
scripts/: main.py  run_experiments.py  train.py
src/: __init__.py  data_structure.py  extractor.py  loader.py  preprocessor.py  reporter.py  trainer.py  utils.py
src/data/: loader.py  structures.py
src/dataloader/: dataloader.py  featureloader.py  loader.py
src/dataloader/selector/: age_balancing.py  data_selector.py  demographics.py  subject_filter.py
src/featureloader/: featureloader.py
src/features/: demographic_features.py  selection.py
src/models/: classifiers.py
src/modeltrainer/: modeltrainer.py
src/modeltrainer/trainfactory/: classifier_factory.py  classifiers.py  cross_validation.py  feature_selection.py  training_utils.py
src/reporter/: reporter.py
src/train/: cross_validation.py
src/utils/: utils.py
test/: test_extractor.py  test_preprocessor.py
tests/: test_dataloader.py  test_real_data.py  test_selection.py  test_train_pipeline.py  test_utils.py
