[project]
name = "4080-pratical-refactoring-example"
version = "0.1.0"
description = ""
authors = [
    {name = "a7266165",email = "M123020018@student.nsysu.edu.tw"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "deepface (>=0.0.95,<0.0.96)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "tensorflow (==2.15.0)",
    "tf-keras (==2.15.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "torch (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
